gitops/workloads/helm/jupyter/extras/06-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter
  namespace: jupyter
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - "jupyter.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: proxy-public
          port: 80
